--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,22 +371,27 @@ h2, h3, h4, h5, h6 {
 
 #hero {
 width: 100%;
-/* height: 79vh; */
 background: #f9f9f9;
+background-color: #f1f1f1;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+height: 82vh;
 
-/* border: solid 1px rebeccapurple; */
 }
 #hero .container {
-padding-top: 0px;
+padding-top: 20px;
 }
+
 #hero h2 {
 font-size: 40px;
 font-weight: 700;
 line-height: 56px;
 color: #0f394c;
 text-transform: uppercase;
+
 text-align: center;
+
 }
+
 #hero h3 {
 color: #1c698c;
 margin: 10px 0 0 0;
@@ -396,75 +401,33 @@ text-align: justify;
 
 }
 
-.row{
-display: flex;
-flex-flow: row nowrap;
+.row .hero-img img{
+width: 100%;
 }
 
-.row .orde-text {
-width: 50%;
-padding: 100px 30px 30px 30px;
-
+@media (max-width: 991px) {
+  #hero {
+    height: 100vh;
+    text-align: center;
+  }
+  #hero .hero-img img {
+    width: 55%;
+  }
+}
+@media (max-width: 768px) {
+  #hero h2 {
+    font-size: 26px;
+    line-height: 36px;
+  }
+  #hero h3 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  #hero .hero-img img {
+    width: 80%;
+  }
 }
 
-.row .img-hero{
-width: 50%;
-}
-
-#hero .img-hero .img-hero-variante{
-width: 80%;
-height: 100%;
-
-} 
-
-@media screen and (max-width: 991px){
-
-  #hero h2{
-      font-size:28px;
-  }
-
-  #hero h3{
-      font-size: 16px;
-  }
-
-  .row .orde-text{
-      width: 100%;
-      padding: 30px 30px;
-  }
-
-  .row .img-hero{
-      width: 100%;
-      margin: 0 auto;
-  }
-  
-}
-
-@media screen and (max-width: 768px) {
-
-  .row{
-      flex-direction: column;
-  }
-
-  #hero h2{
-      font-size:26px;
-  }
-
-  #hero h3{
-      font-size: 14px;
-      text-align: justify;
-  }
-  .row .orde-text{
-      width: 91%;
-      padding: 30px 30px;
-      margin: 0 auto;
-  }
-
-  .row .img-hero{
-      width: 91%;
-      margin: 0 auto;
-  }
-
-}
 
 /*--------------------------------------------------------------
 # Nosotros Section
