--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,8 +124,13 @@ h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.05);  
   padding: 20px 0;
+
+  /* top:40px;
+  position: fixed;
+  width: 100%; */
+
   position: sticky;
-  top: 0;
+  top: 0; 
 
   /*width: 100%; 
     padding: 20px 5px; */
@@ -178,6 +183,7 @@ h2, h3, h4, h5, h6 {
 *******************/
 .navbar {
   padding: 0;
+  z-index: 100 !important;
 }
 .navbar ul {
   margin: 0;
@@ -405,6 +411,14 @@ text-align: justify;
 width: 100%;
 }
 
+@media (max-width: 1200px) {
+  #hero {
+    height: 68vh;
+    text-align: center;
+  }
+ 
+}
+
 @media (max-width: 991px) {
   #hero {
     height: 100vh;
@@ -415,6 +429,10 @@ width: 100%;
   }
 }
 @media (max-width: 768px) {
+  #hero{
+
+    height: 95vh;
+  }
   #hero h2 {
     font-size: 26px;
     line-height: 36px;
@@ -434,144 +452,273 @@ width: 100%;
 --------------------------------------------------------------*/
 
 #nosotros{
-width: 100%;
-/* height: 78vh; */
-/* border: solid 2px #1c698c; */
-/* background-image: url(../img/face.jpg);
-background-repeat: no-repeat; */
-
-background-color: #ffffff;
-background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%23dfdbe5' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-}
-
-#nosotros .container__nosotros{
-padding-top: 50px;
-display: flex;
-flex-flow: row nowrap;
-align-content: center;
-/* border: solid 1px black; */
-/* height: 480px; */
-}
-
-#nosotros .container__nosotros .nosotros__video{
-width: 50%;
-margin: 20px;
-}
-
-.container__nosotros .nosotros__video .video{
-width: 100%;
-height: 100%;
-}
-
-
-.nosotros .container__nosotros .nosotros__tratamiento {
-padding-top: 50px;
-padding-bottom: 20px;
-width: 40%;
-line-height: 1.3;
-text-align: justify;
-}
-
-.nosotros .container__nosotros .nosotros__tratamiento .icon-box{
-margin-top: 15px;
-margin-bottom: 15px;
-
-}
-
-@media screen and (max-width: 768px) {
-  #nosotros{
-      height: 100%;
+  width: 100%;
+  /* height: 78vh; */
+  /* border: solid 2px #1c698c; */
+  /* background-image: url(../img/face.jpg);
+  background-repeat: no-repeat; */
+  
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%23dfdbe5' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
   }
+  
   #nosotros .container__nosotros{
-      flex-direction: column;
+  padding-top: 50px;
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: center;
+  /* border: solid 1px black; */
+  /* height: 480px; */
   }
-
+  
   #nosotros .container__nosotros .nosotros__video{
-      width: 91%;
-      margin: 0 auto;
+  width: 50%;
+  margin: 20px;
+  }
+  
+  .container__nosotros .nosotros__video .video{
+  width: 100%;
+  height: 100%;
+  }
+  
+  
+  .nosotros .container__nosotros .nosotros__tratamiento {
+  padding-top: 50px;
+  padding-bottom: 20px;
+  width: 40%;
+  line-height: 1.3;
+  text-align: justify;
+  }
+  
+  .nosotros .container__nosotros .nosotros__tratamiento .icon-box{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  
+  }
+  
+  @media screen and (max-width: 768px) {
+    #nosotros{
+        height: 100%;
+    }
+    #nosotros .container__nosotros{
+        flex-direction: column;
+    }
+  
+    #nosotros .container__nosotros .nosotros__video{
+        width: 91%;
+        margin: 0 auto;
+    }
+  
+    .nosotros .container__nosotros .nosotros__tratamiento {
+        width: 91%;
+        height: 91%;
+        margin: 0 20px;
+       
+    }
   }
 
-  .nosotros .container__nosotros .nosotros__tratamiento {
-      width: 91%;
-      height: 91%;
-      margin: 0 20px;
-     
-  }
-}
+
 
 
 /*--------------------------------------------------------------
 # Portfolio -Servicios
 --------------------------------------------------------------*/
 
-#servicios {
-width: 100%;
-
-/* height: 80%; */
-/* border: 1px solid green; */
+#portfolio{
+  background-color: #f0f9fd;
+}
+.portfolio .section-title{
+  text-align:center;
 }
 
-#servicios .seccion-titulo{
-margin: 50px 50px 30px 50px;
-text-align: center;
-line-height: 1.6;
-
+.portfolio .portfolio-item {
+  margin-bottom: 30px;
 }
-
-#servicios .servicios-container{
-display: flex;
-flex-flow: row wrap;
-align-content: space-around;
-align-items: center;
-gap: 15px;
-
+.portfolio #portfolio-flters {
+  padding: 0;
+  margin: 0 auto 10px auto;
+  list-style: none;
+  text-align: center;
+  border-radius: 50px;
+  padding: 2px 15px;
 }
-
-#servicios .servicios-container .content-item {
-  width: 31%;
-  height: 31%;
-  z-index: 10;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  padding-left: 25px;
-  
+.portfolio #portfolio-flters li {
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #444444;
+  margin-bottom: 10px;
+  transition: all 0.3s ease-in-out;
 }
-
-#servicios .servicios-container .content-item .img-fluida{
-  width: 100%;
-  height: 100%;
-}
-
-
-.servicios-container .content-item .servicios-info h4{
-  color:#777777;
-  display: block;
-
-}
-
-.servicios-container .content-item .servicios-info h4:hover{
+.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #49b5e7;
-
 }
-
-.content-item .servicios-info a{
+.portfolio #portfolio-flters li:last-child {
+  margin-right: 0;
+}
+.portfolio .portfolio-wrap {
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  border: solid 1px #f9f9f9;
+  background: rgba(255, 255, 255, 0.6);
+}
+.portfolio .portfolio-wrap::before {
+  content: "";
+  background: rgba(255, 255, 255, 0.6);
+  position: absolute;
+  left: 30px;
+  right: 30px;
+  top: 30px;
+  bottom: 30px;
+  transition: all ease-in-out 0.3s;
+  z-index: 2;
+  opacity: 0;
+}
+.portfolio .portfolio-wrap .portfolio-info {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  z-index: 3;
+  transition: all ease-in-out 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.portfolio .portfolio-wrap .portfolio-info::before {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  top: 35px;
+  left: 35px;
+  border-top: 3px solid #bdc6ca;
+  border-left: 3px solid #bdc6ca;
+  transition: all 0.5s ease 0s;
+  z-index: 9994;
+}
+.portfolio .portfolio-wrap .portfolio-info::after {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  bottom: 35px;
+  right: 35px;
+  border-bottom: 3px solid #bdc6ca;
+  border-right: 3px solid #bdc6ca;
+  transition: all 0.5s ease 0s;
+  z-index: 9994;
+}
+.portfolio .portfolio-wrap .portfolio-info h4 {
+  font-size: 20px;
+  color: #0f394c;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.portfolio .portfolio-wrap .portfolio-info p {
+  color: #0f394c;
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
+}
+.portfolio .portfolio-wrap .portfolio-links {
+  text-align: center;
+  z-index: 4;
+}
+.portfolio .portfolio-wrap .portfolio-links a {
+  color: #49b5e7;
+  margin: 0 2px;
+  font-size: 28px;
+  display: inline-block;
+  transition: 0.3s;
+}
+.portfolio .portfolio-wrap .portfolio-links a:hover {
   color: #8dd0f0;
-  font-size: 45px;
-  display: block;
+}
+.portfolio .portfolio-wrap:hover::before {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 1;
+}
+.portfolio .portfolio-wrap:hover .portfolio-info {
+  opacity: 1;
+}
+.portfolio .portfolio-wrap:hover .portfolio-info::before {
+  top: 15px;
+  left: 15px;
+}
+.portfolio .portfolio-wrap:hover .portfolio-info::after {
+  bottom: 15px;
+  right: 15px;
 }
 
-.content-item .servicios-info a:hover{
-  color: #49b5e7;
-} 
+/*--------------------------------------------------------------
+# Portfolio Details
+--------------------------------------------------------------*/
 
-
-@media screen and (max-width: 768px) {
-
-  .servicios-container .content-item .servicios-info{
-     margin-left: 50px;
-   
-  }
-
-
+.portfolio-details {
+  padding-top: 40px;
+}
+.portfolio-details .portfolio-details-slider img {
+  width: 100%;
+}
+.portfolio-details .portfolio-details-slider .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #49b5e7;
+}
+.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #49b5e7;
+}
+.portfolio-details .portfolio-info {
+  padding: 30px;
+  box-shadow: 0px 0 30px rgba(15, 57, 76, 0.08);
+}
+.portfolio-details .portfolio-info h3 {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #eee;
+}
+.portfolio-details .portfolio-info ul {
+  list-style: none;
+  padding: 0;
+  font-size: 15px;
+}
+.portfolio-details .portfolio-info ul li + li {
+  margin-top: 10px;
+}
+.portfolio-details .portfolio-description {
+  padding-top: 30px;
+}
+.portfolio-details .portfolio-description h2 {
+  font-size: 26px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.portfolio-details .portfolio-description p {
+  padding: 0;
 }
 
 /*--------------------------------------------------------------
