--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,6 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
   background-color: #ffffff;
-/* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(176,768,377)'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%2348B3E4'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='396' height='330' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.05'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover; */
 }
 
 a {
@@ -36,6 +33,38 @@ h2, h3, h4, h5, h6 {
   font-family: "Dosis", sans-serif;
 }
 
+section {
+  padding: 40px 0;
+  overflow: hidden;
+}
+
+.section-title {
+  text-align: center;
+  padding: 30px 0;
+  position: relative;
+}
+.section-title h2 {
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 0;
+  color: #191919;
+  position: relative;
+  z-index: 2;
+}
+.section-title span {
+  position: absolute;
+  top: 30px;
+  color: #f4f4f4;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  font-weight: 700;
+  font-size: 52px;
+  text-transform: uppercase;
+  line-height: 0;
+}
 
 
 
@@ -44,19 +73,14 @@ h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 
 #topbar{
-  /* grid-area: top-bar; */
-
   background: #49b5e7;
   font-size: 15px;
   color: #fff;
   height: 40px;
   color: rgba(255, 255, 255, 0.6);
+  padding: 0;
 
 }
-
-/* #topbar .contact-info-top{
-  border: red solid 1px;
-} */
 
 #topbar .contact-info-top i{
   font-size: 20px;
@@ -126,15 +150,9 @@ h2, h3, h4, h5, h6 {
   padding: 20px 0;
   z-index: 994;
 
-  /* top:40px;
-  position: fixed;
-  width: 100%; */
-
   position: sticky;
   top: 0; 
 
-  /*width: 100%; 
-    padding: 20px 5px; */
 }
 
 #header .logo{
@@ -152,27 +170,11 @@ h2, h3, h4, h5, h6 {
 #header .logo a {
   color:#0f394c;
  
-
-  /* width: 100%; */
 }
 
 #header .logo img {
   max-height: 70px;
 }
-
-
-/* .container-header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  max-width: 1200px;
-  margin: 0 auto;
-} */
-
-/* .scrolled-offset {
-  margin-top: 70px;
-} */
 
 
 /*------------------------------------------------------------------
@@ -453,121 +455,103 @@ width: 100%;
 --------------------------------------------------------------*/
 
 #nosotros{
-  width: 100%;
-  /* height: 78vh; */
-  /* border: solid 2px #1c698c; */
-  /* background-image: url(../img/face.jpg);
-  background-repeat: no-repeat; */
-  
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%23dfdbe5' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
   }
   
-  #nosotros .container__nosotros{
-  padding-top: 50px;
-  display: flex;
-  flex-flow: row nowrap;
-  align-content: center;
-  /* border: solid 1px black; */
-  /* height: 480px; */
-  }
   
-  #nosotros .container__nosotros .nosotros__video{
-  width: 50%;
+  #nosotros .nosotros-video video{
+  width: 100%;
+  height: 60vh;
   margin: 20px;
   }
-  
-  .container__nosotros .nosotros__video .video{
-  width: 100%;
-  height: 100%;
-  }
-  
-  
-  .nosotros .container__nosotros .nosotros__tratamiento {
-  padding-top: 50px;
-  padding-bottom: 20px;
-  width: 40%;
-  line-height: 1.3;
-  text-align: justify;
-  }
-  
-  .nosotros .container__nosotros .nosotros__tratamiento .icon-box{
-  margin-top: 15px;
-  margin-bottom: 15px;
-  
-  }
-  
-  @media screen and (max-width: 768px) {
-    #nosotros{
-        height: 100%;
-    }
-    #nosotros .container__nosotros{
-        flex-direction: column;
-    }
-  
-    #nosotros .container__nosotros .nosotros__video{
-        width: 91%;
-        margin: 0 auto;
-    }
-  
-    .nosotros .container__nosotros .nosotros__tratamiento {
-        width: 91%;
-        height: 91%;
-        margin: 0 20px;
-       
-    }
+    
+  #nosostros .nosotros-icon {
+    margin-top: 40px;
   }
 
 
+  #nosotros .nosotros-icon h3{
+    font-size: 28px;
+    font-weight: 700;
+    color: #0f394c;
+    margin-bottom: 15px;
+  }
 
+  #nosotros .nosotros-icon p{
+    text-align: justify;
+  }
+
+
+  #nosotros .nosotros-icon .icon {
+    float: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 64px;
+    height: 64px;
+    border: 2px solid #d0ecf9;
+    border-radius: 50px;
+    transition: 0.5s;
+
+  }
+
+  #nosotros .nosotros-icon .icon i{
+    color: #49b5e7;
+    font-size: 32px;
+  }
+
+  #nosotros .nosotros-icon:hover .icon{
+    background: #49b5e7;
+    border-color: #49b5e7;
+  }
+
+  #nosotros .nosotros-icon:hover .icon i{
+    color: #fff;
+  }
+
+  #nosotros .nosotros-icon .title{
+    margin-left: 70px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    font-size: 18px;
+
+  }
+
+  #nosotros .nosotros-icon .title a{
+    color: #343a40;
+    transform: 0.3s;
+
+  }
+
+  #nosotros .nosotros-icon .title a:hover{
+    color: #49b5e7;
+  }
+
+  #nosotros .nosotros-icon .nosotros-descrip{
+    margin-left: 80px;
+    line-height: 24px;
+    font-size: 14px;
+  }
+
+  #nosotros-video{
+    background-size: cover;
+  
+  }
 
 /*--------------------------------------------------------------
 # Portfolio -Servicios
 --------------------------------------------------------------*/
 
+
 #portfolio{
-  background-color: #f0f9fd;
-}
-.portfolio .section-title{
-  text-align:center;
-  padding-top: 30px;
-
-}
-
-.portfolio .section-title h2{
-  font-weight: 600;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%23bfdfed' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
-
-/* .portfolio #portfolio-flters {
-  padding: 0;
-  margin: 0 auto 10px auto;
-  list-style: none;
-  text-align: center;
-  border-radius: 50px;
-  padding: 2px 15px;
-}
-.portfolio #portfolio-flters li {
-  cursor: pointer;
-  display: inline-block;
-  padding: 10px 15px;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1;
-  text-transform: uppercase;
-  color: #444444;
-  margin-bottom: 10px;
-  transition: all 0.3s ease-in-out;
-}
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #49b5e7;
-}
-.portfolio #portfolio-flters li:last-child {
-  margin-right: 0;
-} */
 
 .portfolio .portfolio-wrap {
   transition: 0.3s;
@@ -737,24 +721,15 @@ width: 100%;
   width: 100%;
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23c6dfea' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-  /* background-repeat: repeat; */
 
-  /* border: 1px solid crimson; */
 }
 
-#paquetes .section-title{
-  text-align:center;
-  padding-top: 30px;
-}
-
-#paquetes .section-title h2{
-  font-weight: 600;
-}
 
 
 /*--------------------------------------------------------------
-# Team
+# Section Teams
 --------------------------------------------------------------*/
+
 .team .member {
   text-align: center;
   margin-bottom: 20px;
@@ -791,7 +766,7 @@ width: 100%;
   transition: 0.3s;
 }
 .team .member .social a:hover {
-  color: #cc1616;
+  color: #49b5e7;
 }
 .team .member .social i {
   font-size: 18px;
@@ -804,7 +779,6 @@ width: 100%;
 --------------------------------------------------------------*/
 #contacto{
 width: 100%;
-/* height: 80%; */
 background: #f9f9f9;
 
 /* border: solid 1px fuchsia; */
@@ -920,11 +894,6 @@ line-height: 2;
 # Servicio Details
 --------------------------------------------------------------*/
 
-/* main {
-  grid-area: main;
-} */
-
-
 .servicio-details{
   /* padding-top: 20px;
   padding-bottom: 20px; */
@@ -1020,8 +989,6 @@ line-height: 2;
 #/ Descripción
 --------------------------------------------------------------*/
 .descripcion{
-  /* grid-area: section; */
-
   padding: 15px 0;
   background: #f0f9fd;
   margin-top: 0px;
@@ -1086,11 +1053,6 @@ line-height: 2;
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-
-/* #footer{
-  grid-area: footer;
-} */
-
 
 #footer {
 background: #fff;
