--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1040,6 +1040,12 @@ width: 100%;
   font-size: 14px;
   background: #ebf7fc;
 }
+
+#footer .footer-top .footer-contact h3{
+ font-weight: 700;
+ font-family: 'Lobster', cursive;
+
+}
 #footer .footer-newsletter {
   padding: 50px 0;
   background: #f0f9fd;
@@ -1180,24 +1186,6 @@ width: 100%;
     text-align: center;
   }
 }
-
-
-
-/* body .scroll-up{
-position:fixed;
-display: block;
-right: 10px;
-bottom: 10px;
-color: #76c7ed;
-}
-
-body .scroll-up i{
-font-size: 50px;
-}
-
-body .scroll-up:hover{
-  color: #49b5e7; 
-}  */
 
 /*--------------------------------------------------------------
 # Back to top button
