--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -869,101 +869,6 @@ width: 100%;
 
 
 /*--------------------------------------------------------------
-# Servicio Details
---------------------------------------------------------------*/
-
-.servicio-details{
-  /* padding-top: 20px;
-  padding-bottom: 20px; */
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 99%;
-  height: 70vh;
-  font-family: "Dosis", sans-serif;;
-}
-
-.servicio-details .container-flex{
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-evenly;
-  height:100%;
-  width: 97%;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.servicio-details .container-flex div{
-  margin: 10px;
-}
-
-.servicio-details .container-flex .servicio-imagen{
-  width: 50%;
-  height: 90%;
-  margin-left: 100px;
-}
-
-.imagen-muestra{
-  width: 100%;
-  height: 100%;
-}
-
-.servicio-details .container-flex .servicio-info{
-  line-height: 2;
-}
-
-.servicio-details .container-flex .servicio-info ul{
-  list-style: none;
-}
-
-.servicio-details .container-flex .servicio-info, .servicio-descripcion {
-  width: 40%;
-  height: 40%;
-  padding-left: 10px;
-  padding-right: 10px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-
-}
-
-@media screen and (max-width: 768px){
-
-
-  .servicio-details{
-   height: 100%;
-  }
-
-  .servicio-details .container-flex{
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-  
-    
-    height:100%;
-    width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .servicio-details .container-flex .servicio-imagen{
-    width: 100%;
-    height: 100%;
-    margin-left: 0px;
- 
-  }
-
-  
-  .servicio-details .container-flex .servicio-info, .servicio-descripcion {
-    width: 100%;
-    height: 50;
-    padding-left: 5px;
-    padding-right: 5px;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  
-  }
-
-}
-
-
-/*--------------------------------------------------------------
 #/ Descripción
 --------------------------------------------------------------*/
 .descripcion{
@@ -975,54 +880,51 @@ width: 100%;
 
   }
 
-  .descripcion .detalle{
-  padding-left: 8%;
-  font-size: 25px;
-  font-weight: 500;
-  font-family: "Lato", sans-serif;
+  @media (max-width: 992px){
+    .descripcion {
+      margin-top: 74px;
+    }
   }
+
+
+  .descripcion h2{
+    font-size: 28px;
+    font-weight: 400;
+    font-family: "Lato", sans-serif;
+  }
+
   .descripcion ol{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  list-style: none;
-  font-size: 16px;
-  font-weight: 600;
-  padding-right: 12%;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    font-size: 18px;
+    padding: 0;
+    margin: 0;
   }
-  .descripcion ol li + li {
-  padding-left: 10px;
+
+  .descripcion ol li + li{
+    padding-left: 10px;
   }
+
   .descripcion ol li + li::before{
-  display: inline-block;
-  padding-right: 10px;
-  color: #175977;
-  content: "/";
+    display: inline-block;
+    padding-right: 10px;
+    color: #175977;
+    content: "/";
+  
   }
 
-  .d-flex{
-  display: flex !important;
-  }
-
-  .justify-content-between{
-  justify-content: space-between;
-  }
-  .align-items-cente{
-  align-items: center;
-  }
-
-
-  @media screen and (max-width: 768px){
-
-  .d-flex{
-      flex-wrap: wrap;
-      flex-direction: column;
-  }
-
-  .descripcion ol{
-      margin-left: 60px;
-  }
-
+  @media (max-width:768px){
+    .descripcion .d-flex{
+      display: block !important;
+    }
+    .descripcion ol{
+      display: block;
+      
+    }
+    .descripcion ol li{
+      display: inline-block;
+    }
 
   }
 
