--- a/assets/scss/components/_topbar.scss
+++ b/assets/scss/components/_topbar.scss
@@ -7,7 +7,7 @@
     font-size: 15px;
     color: $color-fuente-prin;
     height: 40px;
-    color:rgba(255, 255, 255, 0.6) ;
+    color: $color-topbar;
     padding: 0;
         .contact-info-top
         {
@@ -22,7 +22,7 @@
 
             a{
               line-height: 0;
-              color: rgba(255, 255, 255, 0.6);
+              color: $color-topbar;
               transition: 0.3s;
 
               &:hover{
