--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,18 +1,18 @@
 
-  @import 'variables';
-  @import 'reset_y_general';
-  @import 'topbar';
-  @import 'header';
-  @import 'hero_section';
-  @import 'nosotros_section';
-  @import 'porfolio_servicios';
-  @import 'porfolio_details';
-  @import 'porfolio_paquetes';
-  @import 'teams_section';
-  @import 'contacto';
-  @import 'descripcion';
-  @import 'footer';
-  @import 'back_top_up';
+  @import 'bases/variables';
+  @import 'components/reset_y_general';
+  @import 'components/topbar';
+  @import 'components/header';
+  @import 'components/hero_section';
+  @import 'components/nosotros_section';
+  @import 'components/porfolio_servicios';
+  @import 'components/porfolio_details';
+  @import 'components/porfolio_paquetes';
+  @import 'components/teams_section';
+  @import 'components/contacto';
+  @import 'components/descripcion';
+  @import 'components/footer';
+  @import 'components/back_top_up';
 
   
   
