--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -2,40 +2,39 @@
 /*--------------------------------------------------------------
   # Header
   --------------------------------------------------------------*/
-  
-  #header{
-    background: #fff;
+
+  #header
+  {
+    background-color: $bg-blanco ;
     transition: all 0.5s;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.05);  
+    box-shadow: $color-rgb-header;
     padding: 20px 0;
     z-index: 994;
-  
     position: sticky;
-    top: 0; 
-  
+    top: 0;
+
+        .logo{
+          font-size: 35px;
+          line-height: 1;
+          font-weight: 700;
+          letter-spacing: normal;
+          font-family: $font-element-logo;
+          text-align: left;
+            
+            a{
+              color:$color-fuente-logo ;
+
+            }
+
+            img{
+              max-height: 70px;
+
+            }
+
+        }
   }
   
-  #header .logo{
-    font-size: 35px;
-    line-height: 1;
-    font-weight: 700;
-    letter-spacing: normal;
-    font-family: 'Lobster', cursive;
-  
-    /* ---- */
-    text-align: left;
-    
-  }
-  
-  #header .logo a {
-    color:#0f394c;
-   
-  }
-  
-  #header .logo img {
-    max-height: 70px;
-  }
-  
+
   
   /*------------------------------------------------------------------
   # Header =>con=> Menu de Navegacion
@@ -44,94 +43,120 @@
   /*******************
   * Modo Escritorio
   *******************/
+
   .navbar {
-    padding: 0;
+      padding: 0;
+          ul{
+            margin: 0;
+            padding: 0;
+            display: flex;
+            list-style: none;
+            align-items: center;
+          }
+          li{
+            position: relative;
+          }
+
+          a{
+
+            @extend %narvar-a-focus;
+
+            &:focus{
+              @extend %narvar-a-focus;
+            }
+          }
   
   }
-  .navbar ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style: none;
-    align-items: center;
-  }
-  .navbar li {
-    position: relative;
-  }
-  .navbar a, .navbar a:focus {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 0 10px 30px;
-    font-family: "Dosis", sans-serif;
-    font-size: 15px;
-    font-weight: 600;
-    color: #0f394c;
-    white-space: nowrap;
-    transition: 0.3s;
-    text-transform: uppercase;
-  }
-  .navbar a i, .navbar a:focus i {
-    font-size: 12px;
-    line-height: 0;
-    margin-left: 5px;
-  }
+
+
   .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
     color: #49b5e7;
   }
-  .navbar .dropdown ul {
-    display: block;
-    position: absolute;
-    left: 14px;
-    top: calc(100% + 30px);
-    margin: 0;
-    padding: 10px 0;
-    z-index: 99;
-    opacity: 0;
-    visibility: hidden;
-    background: #fff;
-    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-    transition: 0.3s;
+
+  .navbar {
+
+        .dropdown {
+            
+            &:hover > ul{
+              opacity: 1;
+              top: 100%;
+              visibility: visible;
+               
+            }
+              ul{
+                display: block;
+                position: absolute;
+                transition: $trans-navbar-box-div;
+                left: 14px;
+                top: calc(100% + 30px);
+                margin: 0;
+                padding: 10px 0;
+                z-index: 99;
+                opacity: 0;
+                visibility: hidden;
+                background: $bg-blanco;
+                box-shadow: $color-rgb-elem;
+
+                  li{
+                    min-width: 200px;
+                      a{
+                        padding: 10px 20px;
+                        font-size: 15px;
+                        text-transform: none;
+                        font-weight: 500;
+                          i{
+                            font-size: 12px;
+                          }
+                      }
+                  }
+              }
+        }
   }
-  .navbar .dropdown ul li {
-    min-width: 200px;
-  }
-  .navbar .dropdown ul a {
-    padding: 10px 20px;
-    font-size: 15px;
-    text-transform: none;
-    font-weight: 500;
-  }
-  .navbar .dropdown ul a i {
-    font-size: 12px;
-  }
+
+
   .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
     color: #49b5e7;
-  }
-  .navbar .dropdown:hover > ul {
-    opacity: 1;
-    top: 100%;
-    visibility: visible;
-  }
-  .navbar .dropdown .dropdown ul {
-    top: 0;
-    left: calc(100% - 30px);
-    visibility: hidden;
-  }
-  .navbar .dropdown .dropdown:hover > ul {
-    opacity: 1;
-    top: 0;
-    left: 100%;
-    visibility: visible;
-  }
-  @media (max-width: 1366px) {
-    .navbar .dropdown .dropdown ul {
-      left: -90%;
     }
-    .navbar .dropdown .dropdown:hover > ul {
-      left: -100%;
-    }
+
+  .navbar {
+        .dropdown{
+
+            .dropdown{
+                ul{
+                  top: 0;
+                  left: calc(100% - 30px);
+                  visibility: hidden;
+                }
+
+                &:hover > ul {
+                  opacity: 1;
+                  top: 0;
+                  left: 100%;
+                  visibility: visible;
+                }
+
+                @media (max-width: 1366px) {
+                  ul {
+                    left: -90%;
+                  }
+    
+                  &:hover > ul{
+                    left: -100%;
+    
+                  }
+    
+                }
+            }  
+
+        }
   }
+
+
+  
+  /*******************************
+  * Navegacion Mobile con opcion JS
+  *******************************/
+  
   
   /********************
   * Navegacion Mobile
