--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,6 @@
 
   @import 'bases/variables';
+  @import 'bases/extends';
   @import 'components/reset_y_general';
   @import 'components/topbar';
   @import 'components/header';
