--- a/assets/scss/components/_topbar.scss
+++ b/assets/scss/components/_topbar.scss
@@ -7,7 +7,7 @@
     font-size: 15px;
     color: $color-fuente-prin;
     height: 40px;
-    color: $color-topbar;
+    color: $color-rgb-topbar;
     padding: 0;
         .contact-info-top
         {
@@ -22,7 +22,7 @@
 
             a{
               line-height: 0;
-              color: $color-topbar;
+              color: $color-rgb-topbar;
               transition: 0.3s;
 
               &:hover{
