--- a/assets/scss/bases/_variables.scss
+++ b/assets/scss/bases/_variables.scss
@@ -10,13 +10,17 @@ $elem-color-primario: #49b5e7;
 $elem-color-secundario:#76c7ed;
 $color-fuente-prin:#fff;
 $color-fuente-logo:#0f394c;
+$bg-color-hero:#f1f1f1;
+$bg-color-hero-2:#f9f9f9;
 
 /*---SPAN color y text transform---*/
 $span-color: #f4f4f4;
 $text-uppercase:uppercase;  //new
 
-/*---H2 color---*/
+/*---colorres h2 a h6---*/
 $h2-color: #191919;
+$h2-color: #0f394c;
+$h3-color-hero:#1c698c;
 
 
 /*---COLORES rgba con opacidad---*/ 
