--- a/assets/scss/components/_porfolio_details.scss
+++ b/assets/scss/components/_porfolio_details.scss
@@ -1,6 +1,6 @@
 
  /*--------------------------------------------------------------
-  # Portfolio Details
+  # Portfolio Details -element con JS
   --------------------------------------------------------------*/
   
   .portfolio-details {
