--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,8 @@
 
   @import 'bases/variables';
   @import 'bases/extends';
+  @import 'bases/mapas';
+  @import 'bases/mixins';
   @import 'components/reset_y_general';
   @import 'components/topbar';
   @import 'components/header';
