--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,6 @@
 /*---COLORES rgba con opacidad---*/
 /*--Fuentes--*/
 /*--Transiciones--*/
-.navbar a:focus, .navbar a {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 0 10px 30px;
-  font-family: "Dosis", sans-serif;
-  font-size: 15px;
-  font-weight: 600;
-  color: #0f394c;
-  white-space: nowrap;
-  transition: 0.3s;
-  text-transform: uppercase;
-}
-
 /*--------------------------------------------------------------
 # Reset CSS 
 --------------------------------------------------------------*/
@@ -181,6 +167,33 @@ section {
 .navbar li {
   position: relative;
 }
+.navbar a {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0 10px 30px;
+  font-size: 15px;
+  font-family: "Dosis", sans-serif;
+  font-weight: 600;
+  color: #0f394c;
+  white-space: nowrap;
+  transition: 0.3s;
+  text-transform: uppercase;
+}
+.navbar a:focus {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0 10px 30px;
+  font-size: 15px;
+  font-family: "Dosis", sans-serif;
+  font-weight: 600;
+  color: #0f394c;
+  white-space: nowrap;
+  transition: 0.3s;
+  text-transform: uppercase;
+}
+
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
   color: #49b5e7;
 }
@@ -360,11 +373,12 @@ section {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   height: 82vh;
 }
-
 #hero .container {
   padding-top: 20px;
 }
-
+#hero .container .row .hero-img img {
+  width: 100%;
+}
 #hero h2 {
   font-size: 40px;
   font-weight: 700;
@@ -373,7 +387,6 @@ section {
   text-transform: uppercase;
   text-align: center;
 }
-
 #hero h3 {
   color: #1c698c;
   margin: 10px 0 0 0;
@@ -382,23 +395,19 @@ section {
   text-align: justify;
 }
 
-.row .hero-img img {
-  width: 100%;
-}
-
 @media (max-width: 1200px) {
   #hero {
     height: 68vh;
     text-align: center;
   }
 }
-@media (max-width: 991px) {
+@media (max-width: 991px) and (min-width: 769px) {
   #hero {
     height: 100vh;
     text-align: center;
   }
   #hero .hero-img img {
-    width: 55%;
+    width: 65%;
   }
 }
 @media (max-width: 768px) {
@@ -630,7 +639,7 @@ section {
 }
 
 /*--------------------------------------------------------------
- # Portfolio Details
+ # Portfolio Details -element con JS
  --------------------------------------------------------------*/
 .portfolio-details {
   padding-top: 40px;
