--- a/assets/scss/bases/_variables.scss
+++ b/assets/scss/bases/_variables.scss
@@ -18,7 +18,7 @@ $span-color: #f4f4f4;
 $text-uppercase:uppercase;  //new
 
 /*---colorres h2 a h6---*/
-$h2-color: #191919;
+$h2-color-title: #191919;
 $h2-color: #0f394c;
 $h3-color-hero:#1c698c;
 
@@ -27,6 +27,7 @@ $h3-color-hero:#1c698c;
 $color-rgb-topbar: rgba(255, 255, 255, 0.6);
 $color-rgb-header:  0px 2px 15px rgba(0, 0, 0, 0.05);
 $color-rgb-elem: 0px 0px 30px rgba(127, 137, 161, 0.25);
+$color-rgb-boxshadow:0px 0 30px rgba(15, 57, 76, 0.08);
 
 
 /*--Fuentes--*/
