algunos cambios sass y SEO

--- a/assets/scss/bases/_variables.scss
+++ b/assets/scss/bases/_variables.scss
@@ -21,6 +21,7 @@ $text-uppercase:uppercase;  //new
 $h2-color-title: #191919;
 $h2-color: #0f394c;
 $h3-color-hero:#1c698c;
+$h4-color:#0f394c;
 
 
 /*---COLORES rgba con opacidad---*/ 
