--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,6 +719,7 @@ section {
 .pagina-interna .mensaje p {
   text-align: center;
   font-size: 36px;
+  color: #0f394c;
   font-weight: 500;
   font-family: "Lobster", cursive;
   line-height: 4;
