--- a/assets/scss/components/_porfolio_details.scss
+++ b/assets/scss/components/_porfolio_details.scss
@@ -49,6 +49,7 @@
   .pagina-interna  .mensaje p{
     text-align: center;
     font-size: 36px;
+    color:#0f394c;
     font-weight: 500;
     font-family: $font-element-logo;
     line-height: 4;
