agregando clase .disclaimer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ section {
   z-index: 2;
 }
 
+.disclaimer {
+  display: none;
+}
+
 /*--------------------------------------------------------------
  # TopBar
  --------------------------------------------------------------*/
